Fix ocamldoc references

--- a/lib/intro.html
+++ b/lib/intro.html
@@ -26,6 +26,6 @@ then be connected to by the {{!transport}connection establishment} modules.
 
 All of the name resolvers conform to the {!Conduit.RESOLVER} module type.
 The OS-specific implementations of this interface are: 
-{!modules: Conduit_resolver_lwt Conduit_resolver_lwt_unix Conduit_resolver_mirage}
+{!modules: Resolver_lwt Resolver_lwt_unix Resolver_mirage}
 
 {!indexlist}
